--- a/src/recipesearch/recipe_listitem.fxml
+++ b/src/recipesearch/recipe_listitem.fxml
@@ -7,6 +7,7 @@
 <fx:root onMouseClicked="#onClick" prefHeight="100.0" prefWidth="495.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="recipeListImageView" fitHeight="100.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="recipeListLabel" layoutX="135.0" layoutY="14.0" prefHeight="17.0" prefWidth="355.0" text="Stekt ägg" />
+      <Label fx:id="recipeListLabel" layoutX="135.0" layoutY="14.0" prefHeight="17.0" prefWidth="355.0" text="Title" />
+      <Label fx:id="recipeListPriceLabel" alignment="CENTER_RIGHT" layoutX="377.0" layoutY="69.0" prefHeight="17.0" prefWidth="104.0" text="Price" />
    </children>
 </fx:root>
